# unscripted-living

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.playwright-mcp/: page-2026-04-28T11-51-19-913Z.yml  page-2026-04-28T12-09-57-794Z.yml
blog/: admin.py  context_processors.py  feeds.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_content.py  0003_comment_auto_approve.py  0004_category_is_gallery.py  0005_post_visibility_newsletter_subscriber.py
config/: asgi.py  logging_utils.py  middleware.py  otel_config.py  settings.py  urls.py  wsgi.py
documents/setup/: 01_django_setup.md  02_kubernetes_setup.md  03_otel_setup.md  04_authentication_setup.md  05_postgres_setup.md  claude_backup_instructions.md  claude_instructions.md  roadmap.md
k8s/: backup-pvc.yaml  cronjob-backup.yaml  deployment.yaml  secrets.yaml
static/css/: site.css
templates/: 404.html  500.html  base.html
templates/account/: base.html  login.html  logout.html  password_reset.html  signup.html
templates/blog/: _post_card.html  archive.html  category_detail.html  home.html  post_detail.html  post_list.html  search_results.html  unsubscribe.html
